completed the about section using background clip property and image composition hover effects

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -12,7 +12,7 @@
   position: relative;
 
   /* Clip Path Property */
-  clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 
   &__logo-box {
     position: absolute;
